# chess

./: .gitignore  Cargo.toml  output.txt
notebooks/: models.ipynb
python_gui/: chess_gui.py  chess_types.py  interface.py  settings.py  universal_chess_interface.py
src/: main.rs
src/backend/: chess_board.rs  chess_game.rs  chess_move.rs  chess_status.rs  color.rs  mod.rs  piece.rs  square.rs
src/backend/bitboard/: basic_bitboard.rs  mod.rs
src/chess_server/: board_interface.rs  game.rs  mod.rs  types.rs
src/chess_server/chess_types/: chess_board.rs  chess_move.rs  chess_status.rs  color.rs  color_piece.rs  mod.rs  piece.rs  square.rs
src/chess_server/io/: io_player.rs  mod.rs  utils.rs
src/engines/: alpha_beta_search.rs  engine_traits.rs  if_else_engine.rs  iterative_deepening.rs  material_evaluator.rs  min_max_search.rs  mod.rs  positional_evaluator.rs  random_engine.rs  zobrist_hash.rs
src/engines/bots/: corpish.rs  darkrai.rs  magikarp.rs  mod.rs  ninetales.rs  pignite.rs  pikachu.rs  pokedex.rs  pokemon.rs  tepig.rs  weedle.rs
src/engines/evaluators/: cache_evaluator.rs  capture_evaluator.rs  clamp_evaluator.rs  dynamic_evaluator.rs  king_safety_evaluator.rs  linear_evaluator.rs  material_evaluator.rs  mod.rs  negate_evaluator.rs  pesto_evaluator.rs  positional_evaluator.rs  pressure_evaluator.rs  rollout_evaluator.rs  stochastic_rollout.rs  structure_evaluator.rs  threshold_evaluator.rs  trivial_evaluator.rs
src/engines/policies/: mod.rs  softmax_policy.rs
src/modular_server/: chess_traits.rs  mod.rs  primitive_types.rs
(+17 files in other folders)
