[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
env_logger = "0.10.1"
log = "0.4.20"
ordered-float = "4.1.1"
rand = "0.8.5"
simple-logging = "2.0.2"
smallvec = "1.11.2"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3  # Maximum optimization
